Remove blank lines before the xml directive.
Most of the servlets add one or two blank lines before the xml
directive. The xml directive should be first in a well-formed xml
document.

This patch sets the "trim-directive-whitespaces" property in the
deployment descriptor, so that blank lines inserted by JSP directives
are removed. The deployment descriptor format was upgraded from 2.3
to 2.5 in order to support this property.

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN" "http://java.sun.com/dtd/web-app_2_3.dtd">
-<web-app>
+<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
   <display-name>OpenGrok</display-name>
   <description>A wicked fast source browser</description>
   <context-param>
@@ -169,4 +168,10 @@
     <error-code>500</error-code>
     <location>/error</location>
   </error-page>
+  <jsp-config>
+    <jsp-property-group>
+      <url-pattern>*.jsp</url-pattern>
+      <trim-directive-whitespaces>true</trim-directive-whitespaces>
+    </jsp-property-group>
+  </jsp-config>
 </web-app>
