--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -14,27 +14,24 @@
     <description>An address where OpenGrok can receive new configuration</description>
   </context-param>
 
-  <!--
   <context-param>
       <param-name>authorizationPluginDirectory</param-name>
       <param-value>/var/opengrok/plugins</param-value>
       <description>
           Directory with authorization plugins.
           Default value is dataRoot/../plugins 
-            (can be /var/opengrok/plugins if
-             dataRoot is /var/opengrok/data)
+            (can be /var/opengrok/plugins if dataRoot is /var/opengrok/data).
       </description>
   </context-param>
   
   <context-param>
       <param-name>enableAuthorizationWatchDog</param-name>
-      <param-value>true</param-value>
+      <param-value>false</param-value>
       <description>
           Enable watching the plugin directory for changes in real time.
           Suitable for development.
       </description>
   </context-param>
-  -->
   
   <listener>
    <listener-class>org.opensolaris.opengrok.web.WebappListener</listener-class>
