lucene 6.0.1, bcel upgrade

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,5 @@
+file.reference.bcel-6.0-20150726.222224-123.jar=lib/bcel-6.0-20150726.222224-123.jar
+javac.external.vm=false
 #Fri Nov 06 11:03:18 CET 2015
 jnlp.offline-allowed=false
 javadoc.splitindex=true
@@ -10,8 +12,10 @@ file.reference.lucene-core.jar=lib/${lucene-core.jar}
 dist.war=${dist.dir}/source.war
 javac.target=1.8
 build.generated.dir=${build.dir}/generated
-run.classpath=${javac.classpath}\:${build.classes.dir}
-lucene.version=6.0.0
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
+lucene.version=6.0.1
 lucene-core.jar=lucene-core-${lucene.version}.jar
 file.reference.opengrok-dev-test=test
 debug.test.classpath=${run.test.classpath}
@@ -41,7 +45,15 @@ javac.source=1.8
 run.jvmargs=-ea -enableassertions\:org.opensolaris.opengrok...
 manifest.custom.permissions=
 lucene-analyzers-common.jar=lucene-analyzers-common-${lucene.version}.jar
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}\:lib/derby.jar\:${file.reference.opengrok-dev-test}\:${jacoco.home}/lib\:${emma.home}\:lib/jacoco/lib\:lib/emma
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}:\
+    lib/derby.jar:\
+    ${file.reference.opengrok-dev-test}:\
+    ${jacoco.home}/lib:\
+    ${emma.home}:\
+    lib/jacoco/lib:\
+    lib/emma
 file.reference.servlet-api.jar=lib/${servlet-api.jar}
 build.generated.sources.dir=${build.dir}/generated-sources
 ant.library.dir=${ant.home}/lib
@@ -59,11 +71,20 @@ lucene-suggest.jar=lucene-suggest-${lucene.version}.jar
 lucene-queryparser.jar=lucene-queryparser-${lucene.version}.jar
 javadoc.additionalparam=
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
-javac.classpath=${file.reference.ant.jar}\:${file.reference.bcel-5.2.jar}\:${file.reference.jrcs.jar}\:${file.reference.json-simple-1.1.1.jar}\:${file.reference.lucene-analyzers-common.jar}\:${file.reference.lucene-core.jar}\:${file.reference.lucene-queryparser.jar}\:${file.reference.lucene-suggest.jar}\:${file.reference.servlet-api.jar}\:${file.reference.swing-layout-0.9.jar}
+javac.classpath=\
+    ${file.reference.ant.jar}:\
+    ${file.reference.jrcs.jar}:\
+    ${file.reference.bcel-6.0-20150726.222224-123.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.lucene-analyzers-common.jar}:\
+    ${file.reference.lucene-core.jar}:\
+    ${file.reference.lucene-queryparser.jar}:\
+    ${file.reference.lucene-suggest.jar}:\
+    ${file.reference.servlet-api.jar}:\
+    ${file.reference.swing-layout-0.9.jar}
 javadoc.noindex=false
 manifest.custom.codebase=
 annotation.processing.enabled.in.editor=false
-file.reference.bcel-5.2.jar=lib/bcel-5.2.jar
 javadoc.private=false
 javadoc.encoding=${source.encoding}
 build.test.classes.dir=${build.dir}/test/classes
@@ -78,7 +99,8 @@ excludes=
 application.title=OpenGrok
 jnlp.codebase.type=local
 servlet-api.version=2.5
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 build.test.results.dir=${build.dir}/test/results
 file.reference.swing-layout-0.9.jar=lib/swing-layout-0.9.jar
 file.reference.lucene-queryparser.jar=lib/${lucene-queryparser.jar}
