--- a/opengrok-web-nbproject/nbproject/project.properties
+++ b/opengrok-web-nbproject/nbproject/project.properties
@@ -32,9 +32,10 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.bcel-6.0-20150726.222224-123.jar=../lib/bcel-6.0-20150726.222224-123.jar
 file.reference.json-simple-1.1.1.jar=../lib/json-simple-1.1.1.jar
 j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
-lucene.version=6.0.0
+lucene.version=6.0.1
 lucene-core.jar=lucene-core-${lucene.version}.jar
 lucene-analyzers-common.jar=lucene-analyzers-common-${lucene.version}.jar
 lucene-queryparser.jar=lucene-queryparser-${lucene.version}.jar
@@ -44,7 +45,6 @@ file.reference.lucene-analyzers-common.jar=../lib/${lucene-analyzers-common.jar}
 file.reference.lucene-queryparser.jar=../lib/${lucene-queryparser.jar}
 file.reference.lucene-suggest.jar=../lib/${lucene-suggest.jar}
 file.reference.ant.jar=${ant.library.dir}/ant.jar
-file.reference.bcel-5.2.jar=../lib/bcel-5.2.jar
 file.reference.jrcs.jar=../lib/jrcs.jar
 file.reference.opengrok-generatedsrc=../generatedsrc
 file.reference.opengrok-src=../src
@@ -62,8 +62,8 @@ java.source.based=true
 javac.classpath=\
     ${file.reference.ant.jar}:\
     ${file.reference.swing-layout-0.9.jar}:\
-    ${file.reference.bcel-5.2.jar}:\
     ${file.reference.jrcs.jar}:\
+    ${file.reference.bcel-6.0-20150726.222224-123.jar}:\
     ${reference.opengrok.jar}:\
     ${file.reference.lucene-core.jar}:\
     ${file.reference.lucene-analyzers-common.jar}:\
