ctags performance fix

--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@ Copyright (c) 2010, 2015, Oracle and/or its affiliates. All rights reserved.
             <dependency>
                 <groupId>org.apache.bcel</groupId>
                 <artifactId>bcel</artifactId>
-                <version>5.2</version>
+                <version>6.0-20150726.222224-123</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.lucene</groupId>
@@ -253,6 +253,12 @@ Copyright (c) 2010, 2015, Oracle and/or its affiliates. All rights reserved.
             <id>maven.org</id>
             <name>maven.org</name>
             <url>http://repo.maven.apache.org/maven2/</url>
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <id>apache.snapshots</id>
+            <name>apache.snapshots</name>
+            <url>http://repository.apache.org/snapshots/</url>
             <layout>default</layout>
         </repository>
     </repositories>
