Added force switch to run condition
- Based on feedback from PR https://github.com/OpenGrok/OpenGrok/pull/1111 the inclusion of a
force all or force specific repository switch was added to circumvent the RunCondition.
- The 'junit-force-all' property was set in surefire to guarentee all tests are run.
- The version of jacoco was bumped to 0.7.7X
- README information was added regarding the system property switch for the RunCondition.

--- a/opengrok-indexer/pom.xml
+++ b/opengrok-indexer/pom.xml
@@ -176,6 +176,9 @@ Copyright (c) 2010, 2011, Oracle and/or its affiliates. All rights reserved.
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <systemPropertyVariables>
+                        <junit-force-all>true</junit-force-all>
+                    </systemPropertyVariables>
                     <excludes>
                         <!-- Test helper class with name that confuses surefire -->
                         <exclude>**/TestRepository.java</exclude>
