--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,4 @@
-file.reference.bcel-6.0-20160625.223717-148.jar=lib/bcel-6.0-20160625.223717-148.jar
+file.reference.bcel-6.0.jar=lib/bcel-6.0.jar
 javac.external.vm=false
 #Fri Nov 06 11:03:18 CET 2015
 jnlp.offline-allowed=false
@@ -75,7 +75,7 @@ javac.classpath=\
     ${file.reference.ant.jar}:\
     ${file.reference.jrcs.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
-    ${file.reference.bcel-6.0-20160625.223717-148.jar}:\
+    ${file.reference.bcel-6.0.jar}:\
     ${file.reference.lucene-analyzers-common.jar}:\
     ${file.reference.lucene-core.jar}:\
     ${file.reference.lucene-queryparser.jar}:\
