--- a/opengrok-web-nbproject/nbproject/project.properties
+++ b/opengrok-web-nbproject/nbproject/project.properties
@@ -32,7 +32,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.bcel-6.0-20160625.223717-148.jar=../lib/bcel-6.0-20160625.223717-148.jar
+file.reference.bcel-6.0.jar=../lib/bcel-6.0.jar
 file.reference.json-simple-1.1.1.jar=../lib/json-simple-1.1.1.jar
 j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 lucene.version=6.1.0
@@ -64,7 +64,7 @@ javac.classpath=\
     ${file.reference.swing-layout-0.9.jar}:\
     ${file.reference.jrcs.jar}:\
     ${reference.opengrok.jar}:\
-    ${file.reference.bcel-6.0-20160625.223717-148.jar}:\
+    ${file.reference.bcel-6.0.jar}:\
     ${file.reference.lucene-core.jar}:\
     ${file.reference.lucene-analyzers-common.jar}:\
     ${file.reference.lucene-queryparser.jar}:\
