--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@ Copyright (c) 2010, 2015, Oracle and/or its affiliates. All rights reserved.
             <dependency>
                 <groupId>org.apache.bcel</groupId>
                 <artifactId>bcel</artifactId>
-                <version>6.0-20160703.233714-152</version>
+                <version>6.0</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.lucene</groupId>
