first stab on fixing #1170

--- a/opengrok-indexer/pom.xml
+++ b/opengrok-indexer/pom.xml
@@ -131,6 +131,31 @@ Copyright (c) 2010, 2011, Oracle and/or its affiliates. All rights reserved.
                     </execution>
                 </executions>
             </plugin>
+<!-- TODO add the same fix as is in build.xml to patch jflex generated files to stop increasing buffer beyond token size that lucene accepts
+ https://github.com/OpenGrok/OpenGrok/issues/1170 make parsers stop producing tokens > 32766 chars
+ at least for PlainFullTokenizer, PlainSymbolTokenizer, PlainXref, XMLXref
+            <plugin> 
+                <groupId>com.google.code.maven-replacer-plugin</groupId> 
+                <artifactId>replacer</artifactId> 
+                <version>(version)</version> 
+                <executions> 
+                    <execution> 
+                        <phase>prepare-package</phase> 
+                        <goals> 
+                            <goal>replace</goal> 
+                        </goals> 
+                    </execution> 
+                </executions> 
+                <configuration> 
+                    <file>target/someapp/jsp/helloWorld.jsp</file> 
+                    <token>ToKeN</token> 
+                    <value>value</value> 
+                    <regexFlags> 
+                        <regexFlag>CASE_INSENSITIVE</regexFlag> 
+                        <regexFlag>MULTILINE</regexFlag> 
+                    </regexFlags> 
+                </configuration> 
+            </plugin> -->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
