--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ cache:
 before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq exuberant-ctags cvs git mercurial cssc bzr subversion monotone rcs
+before_script:
+ - hg --version
 
 env:
   global:
