--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ cache:
 before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq exuberant-ctags cvs git mercurial cssc bzr subversion monotone rcs
+ - sudo ./scripts/install-bitkeeper.sh
 
 env:
   global:
